--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Anuska Pant <anuska.pant@gmail.com>",
   "dependencies": {
+    "@babel/plugin-transform-classes": "^7.14.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
@@ -12,7 +13,7 @@
     "@popperjs/core": "^2.4.4",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.5.2",
-    "gatsby": "^2.24.50",
+    "gatsby": "^2.32.13",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-manifest": "^2.4.24",
     "gatsby-plugin-offline": "^3.2.24",
@@ -36,13 +37,13 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "heroku-postbuild": "gatsby build"
   },
   "repository": {
     "type": "git",
